--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.7.3",
     "expo": "~50.0.2",
+    "expo-dev-client": "~3.3.6",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.7.2",
     "react": "18.2.0",
     "react-native": "0.73.2"
   },
